Fix for images on mobile browsers

--- a/assets/style.css
+++ b/assets/style.css
@@ -111,6 +111,12 @@ h1 a, h2 a{
 	border-bottom: 1px solid #dfdfdf;
 }
 
+.post img
+{
+    max-width: 100%;
+    height: auto;
+}
+
 .post .date{
 	font: bold 12px 'Open Sans Condensed', sans-serif;
 	text-transform: uppercase;
